# dm-knx-iot-examples-on-nxp-mcxw71

./: .gitmodules  CMakeLists.txt  COPYING-BSD-3.txt  License.txt  README.md  SW-Content-Register.txt  environment_setup.sh
docs/: knx_demo_nxp.md  knx_demo_nxp_otbr.md  knx_shell_help.md  two_knx_demo_nxp_otbr.md
light_actuator/mcxw71/: CMakeLists.txt  main.c
light_sensor/: CMakeLists.txt
light_sensor/mcxw71/: CMakeLists.txt  main.c
patches/: ot-nxp-freertos.patch
port/: CMakeLists.txt  abort.c  clock.c  dns-sd.c  knx_shell.c  knx_shell.h  oc_config.h  random.c  storage.c  thread_connectivity.c  thread_connectivity.h
port/frdm_mcxw71/: knx_pin_mux.c  knx_pin_mux.h
port/freertos/: FreeRTOSConfig.h
script/: build_mcxw71_knx
